--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -7,13 +7,13 @@ metadata:
     'backstage.io/techdocs-ref': dir:.
 spec:
   targets:
-    - ./components/where-for-dinner-api-gateway/where-for-dinner-api-gateway.yaml  
-    - ./components/where-for-dinner-ui/where-for-dinner-ui.yaml
-    - ./components/where-for-dinner-search/where-for-dinner-search.yaml
-    - ./components/where-for-dinner-search-proc/where-for-dinner-search-proc.yaml
-    - ./components/where-for-dinner-availability/where-for-dinner-availability.yaml
-    - ./components/where-for-dinner-notify/where-for-dinner-notify.yaml
-    - ./groups/org.yaml
-    - ./systems/where-for-dinner-system.yaml
-    - ./resources/db/where-for-dinner-db-resource.yaml
-    - ./resources/messaging/where-for-dinner-messaging-resource.yaml  
+    - catalog/components/where-for-dinner-api-gateway/where-for-dinner-api-gateway.yaml  
+    - catalog/components/where-for-dinner-ui/where-for-dinner-ui.yaml
+    - catalog/components/where-for-dinner-search/where-for-dinner-search.yaml
+    - catalog/components/where-for-dinner-search-proc/where-for-dinner-search-proc.yaml
+    - catalog/components/where-for-dinner-availability/where-for-dinner-availability.yaml
+    - catalog/components/where-for-dinner-notify/where-for-dinner-notify.yaml
+    - catalog/groups/org.yaml
+    - catalog/systems/where-for-dinner-system.yaml
+    - catalog/resources/db/where-for-dinner-db-resource.yaml
+    - catalog/resources/messaging/where-for-dinner-messaging-resource.yaml  
